[gd_scene load_steps=7 format=3 uid="uid://myg2mlperxc0"]

[ext_resource type="Script" path="res://src/level/objects/menus.gd" id="1_osg5o"]
[ext_resource type="Script" path="res://src/player/death_menu.gd" id="2_uht26"]
[ext_resource type="Texture2D" uid="uid://du3n1y1jq0wm2" path="res://assets/Photo Mar 18 2025, 1 38 22 AM.png" id="3_jdt8m"]
[ext_resource type="FontFile" uid="uid://dg0bdmkfq8uqx" path="res://assets/Dangrek-Regular.ttf" id="3_xsfe6"]
[ext_resource type="Script" path="res://src/player/pause_menu.gd" id="4_3x12l"]
[ext_resource type="Texture2D" uid="uid://clw205s8vvpdp" path="res://assets/button.png" id="5_d6kas"]

[node name="menus" type="Node"]
script = ExtResource("1_osg5o")

[node name="deathMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("2_uht26")

[node name="TextureRect2" type="TextureRect" parent="deathMenu"]
offset_left = 288.0
offset_top = 131.0
offset_right = 839.0
offset_bottom = 511.0
texture = ExtResource("3_jdt8m")
expand_mode = 1

[node name="You Died" type="Label" parent="deathMenu"]
anchors_preset = -1
anchor_right = 0.347
anchor_bottom = 0.262
offset_left = 337.0
offset_top = 134.0
offset_right = 383.256
offset_bottom = 201.224
theme_override_colors/font_color = Color(0.572851, 0.49296, 0.203095, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 100
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Retry" type="Button" parent="deathMenu"]
offset_left = 352.0
offset_top = 303.0
offset_right = 767.0
offset_bottom = 384.0
size_flags_horizontal = 15
size_flags_vertical = 3
size_flags_stretch_ratio = 12.53
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.572549, 0.494118, 0.203922, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 40
text = "RETRY"
icon = ExtResource("5_d6kas")
flat = true
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="deathMenu"]
offset_left = 354.0
offset_top = 373.0
offset_right = 767.0
offset_bottom = 456.0
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.572549, 0.494118, 0.203922, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 40
text = "QUIT
"
icon = ExtResource("5_d6kas")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="pauseMenu" type="CanvasLayer" parent="."]
script = ExtResource("4_3x12l")

[node name="TextureRect" type="TextureRect" parent="pauseMenu"]
offset_left = 292.0
offset_top = 133.0
offset_right = 839.0
offset_bottom = 510.0
texture = ExtResource("3_jdt8m")
expand_mode = 1

[node name="Pause" type="Label" parent="pauseMenu"]
offset_left = 334.0
offset_top = 152.0
offset_right = 848.0
offset_bottom = 315.0
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 80
text = "GAME PAUSED"

[node name="Resume" type="Button" parent="pauseMenu"]
offset_left = 360.0
offset_top = 274.0
offset_right = 769.0
offset_bottom = 348.0
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 40
text = "RESUME"
icon = ExtResource("5_d6kas")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Retry" type="Button" parent="pauseMenu"]
z_index = 1
offset_left = 360.0
offset_top = 343.0
offset_right = 768.0
offset_bottom = 421.0
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 40
text = "RETRY"
icon = ExtResource("5_d6kas")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="pauseMenu"]
offset_left = 361.0
offset_top = 413.0
offset_right = 769.0
offset_bottom = 488.0
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.87451, 0.631373, 1)
theme_override_colors/font_color = Color(0.694118, 0.552941, 0.0980392, 1)
theme_override_fonts/font = ExtResource("3_xsfe6")
theme_override_font_sizes/font_size = 40
text = "QUIT
"
icon = ExtResource("5_d6kas")
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="deathMenu/Retry" to="deathMenu" method="_on_retry_pressed"]
[connection signal="pressed" from="deathMenu/Quit" to="deathMenu" method="_on_quit_pressed"]
[connection signal="pressed" from="pauseMenu/Resume" to="pauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="pauseMenu/Retry" to="pauseMenu" method="_on_retry_pressed"]
[connection signal="pressed" from="pauseMenu/Quit" to="pauseMenu" method="_on_quit_pressed"]
